Fixed Header Spacing

--- a/css/style.css
+++ b/css/style.css
@@ -151,7 +151,7 @@ header .container {
   display: flex;
   flex-direction: row-reverse;
   gap: 20px;
-  margin: 40px auto;
+  margin: 20px auto 40px auto;
   position: relative;
 }
 
